fixed alignment issue with images

--- a/stylesheets/ebook-grids.scss
+++ b/stylesheets/ebook-grids.scss
@@ -223,7 +223,6 @@ img{
         margin-top: -14%;
         width: 75%;
         height: 75%; 
-        align: center;
     }
     #hero-img{
         max-width:750px;
